--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
-  "name": "shadcn-admin",
-  "private": false,
+  "name": "bermadani-saas",
+  "private": true,
   "version": "2.2.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
+    "dev": "pnpm --parallel --filter \"./apps/*\" dev",
+    "dev:frontend": "vite",
+    "dev:backend": "pnpm --filter backend start:dev",
+    "build": "pnpm --filter \"./apps/*\" build",
+    "build:frontend": "tsc -b && vite build",
+    "build:backend": "pnpm --filter backend build",
     "lint": "eslint .",
     "preview": "vite preview",
     "format:check": "prettier --check .",
